Fixed pagination spacing gap

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -182,6 +182,7 @@ h6, .h6, {
 
 .auth-links, a {
  color: black;
+ padding: 5px;
 }
 
 .register-text {
